Bug 708144 - Make sure to update the Mac accessible tree. r=tbsaunde landing on a CLOSED TREE